--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=demo
+
+spring.datasource.url=jdbc:mysql://localhost:3306/graphql_db
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto = create
+logging.level.com.rest = debug
+
+spring.jpa.defer-datasource-initialization = true
+spring.sql.init.mode = always
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#Show SQL
+spring.jpa.properties.hibernate.show_sql=true
+
+#Format SQL
+spring.jpa.properties.hibernate.format_sql=true
+
+#Show bind values
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+spring.graphql.graphiql.enabled=true
